--- a/blog/src/pages/private/dashboardEditor/Dashboard.css
+++ b/blog/src/pages/private/dashboardEditor/Dashboard.css
@@ -10,7 +10,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    height: 100vh;
+    height: auto;
     overflow: hidden;
 
 }
@@ -74,6 +74,7 @@
     padding: 50px;
     background-image: url('../../../assets/pictures/winter.jpg');
     background-size: cover;
+    background-position: center;
     height: 22%;
 }
 
