--- a/blog/src/pages/private/managePostsEditor/ManagePostsEditor.css
+++ b/blog/src/pages/private/managePostsEditor/ManagePostsEditor.css
@@ -103,3 +103,18 @@
     justify-content: center;
 }
 
+@media (max-width: 769px){
+    .editor-view-post{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .head{
+        display: flex;
+        flex-direction: column;
+    }
+
+
+    
+}
